<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Sort By Name">
        <menu>
            <group>
                <item android:id="@+id/mnuSortByNameAscending"
                    android:title="Ascending"/>
                <item android:id="@+id/mnuSortByNameDescending"
                    android:title="Descending"/>
            </group>
        </menu>
    </item>
    <item android:title="Sort By Size">
        <menu>
            <group>
                <item android:id="@+id/mnuSortBySizeAscending"
                    android:title="Ascending"/>
                <item android:id="@+id/mnuSortBySizeDescending"
                    android:title="Descending"/>
            </group>
        </menu>
    </item>
</menu>