...
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardRecoverableMemory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbarList"
        android:layout_margin="13dp"
        android:clickable="true"
        android:visibility="gone"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Duplicate File List"
            android:textSize="17sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rclDuplicateList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp" />

    </LinearLayout>

...
